--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2,7 +2,7 @@ BODY {color:green }
 
 P {color:red; 
    font-size:20px;
-   font-family:Courier;
+   font-family:Arial, Helvetica, sans-serif;
    font-weight:bold;
    font-style:italic;
    line-height:30px;
